--- a/Resources/layout/activity_calendar.xml
+++ b/Resources/layout/activity_calendar.xml
@@ -14,8 +14,9 @@
             android:orientation = "vertical">
             <DatePicker
                 android:layout_marginTop = "10dp"
+                android:layout_gravity = "center"
                 android:theme ="@style/Theme.AppCompat.Light.Dialog.Alert"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/DatePickerCalendar" />
         </LinearLayout>
